[gd_scene load_steps=5 format=3 uid="uid://bg1xrpjfwt311"]

[ext_resource type="FontFile" uid="uid://ktnlyqclx0vo" path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" id="1_0ti7u"]
[ext_resource type="Script" path="res://Scripts/cabinet_view.gd" id="1_dn38j"]
[ext_resource type="Texture2D" uid="uid://uifwubl0et6e" path="res://Assets/Art/E8AnkNmVcAMu8TH.jpg" id="2_nen64"]
[ext_resource type="Texture2D" uid="uid://b6c5qj5qplsnl" path="res://Assets/Art/OpenCabinet.png" id="2_v7g7v"]

[node name="CabinetView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dn38j")

[node name="ViewOverlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1924.0
offset_bottom = 1081.0
color = Color(0, 0, 0, 0.294118)

[node name="CabinetBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 165.0
offset_right = 1724.0
offset_bottom = 1030.0
color = Color(0.775474, 0.828803, 0.930598, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(947, 595)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_v7g7v")

[node name="CabinetName" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 29.0
offset_right = 1923.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("1_0ti7u")
theme_override_font_sizes/font_size = 128
text = "Cabinet 1"
horizontal_alignment = 1

[node name="CabinetSetIcon" type="Sprite2D" parent="."]
position = Vector2(899, 218)
scale = Vector2(0.161133, 0.161133)
texture = ExtResource("2_nen64")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1592.0
offset_top = 23.0
offset_right = 1896.0
offset_bottom = 147.0
theme_override_fonts/font = ExtResource("1_0ti7u")
theme_override_font_sizes/font_size = 64
text = "Close"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
